connection: factor out protocol_info_supports_{avatar,blocking}

https://bugs.freedesktop.org/show_bug.cgi?id=69466